# AttrDict

./: .gitignore  .travis.yml  README.rst  pyproject.toml
attrdict/: default.py  mapping.py  merge.py  mixins.py
tests/: test_common.py
