[project]
    name = 'attrdict'
    version = '2.1.0'
    authors = ['Brendan Curran-Johnson <brendan@bcjbcj.ca>', 'ENDERZOMBI102 <enderzombi102.end@gmail.com>']
    packages = ['attrdict']
    repository = 'https://github.com/Sapienza-Rocket-Team/AttrDict'
    license = 'MIT'
    description = 'A dict with attribute-style access'
    classifiers = [
        "Development Status :: 7 - Inactive",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 2",
        "Programming Language :: Python :: 2.7",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
    ]
