[tool.poetry]
    name = 'attrdict'
    version = '2.1.0'
    description = 'A dict with attribute-style access'
    authors = [
        'Brendan Curran-Johnson <brendan@bcjbcj.ca>',
        'ENDERZOMBI102 <enderzombi102.end@gmail.com>'
    ]
    license = 'MIT'
    readme = 'README.rst'
    repository = 'https://github.com/Sapienza-Rocket-Team/AttrDict'
    documentation = 'https://github.com/Sapienza-Rocket-Team/AttrDict'
    keywords = [ ]
    classifiers = [
        'Development Status :: 6 - Mature',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy',
    ]
[tool.poetry.dependencies]
    python = '^3.8'

[tool.poetry.dev-dependencies]
    coverage = '^6.5.0'
    flake8 = '^6.0.0'
    nose = '^1.3.7'
    python-coveralls = '^2.9.3'

[build-system]
    requires = [ 'poetry-core>=1.0.0' ]
    build-backend = 'poetry.core.masonry.api'
